Add XHR support and a Google 'convert' function

--- a/manifest.json
+++ b/manifest.json
@@ -13,5 +13,9 @@
     "default_title": "Tiny RPN",
     "name": "RPN Calculator",
     "popup": "popup.html"
-  }
+  },
+  "permissions": [
+    "http://*/*",
+    "https://*/*"
+  ]
 }
