--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,11 @@
 {
   "name": "Tiny RPN",
   "description": "Popup RPN calculator",
-  "version": "2.0",
+  "version": "2.1",
   "icons": {
+    "32": "rps-32.png",
     "48": "rps-48.png",
-    "32": "rps-32.png"
+    "128": "rps-128.png"
   },
   "background_page": "background.html",
   "options_page": "options.html",
